--- a/src/5.kalman.ipynb
+++ b/src/5.kalman.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "d8db0a7e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "d7e271a2",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "41a1f475",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "2e84fe65",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "id": "c153e0f1",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "id": "4ea22f2f",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "id": "5c90974d",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "448b3ce7",
    "metadata": {},
    "outputs": [
@@ -139,41 +139,41 @@
      "text": [
       "RSSI   ETX   Delay  Busy   Classe   Status   Confiança \n",
       "-------------------------------------------------------\n",
-      "-55    2.0   17     0.30   1        Bom      0.85      \n",
-      "-85    3.8   30     0.10   0        Ruim     0.74      \n",
-      "-35    1.2   5      0.05   0        Ruim     0.79      \n",
-      "-88    9.5   95     0.90   1        Bom      0.82      \n",
+      "-55    2.0   17     0.30   1        Bom      0.86      \n",
+      "-85    3.8   30     0.10   0        Ruim     0.76      \n",
+      "-35    1.2   5      0.05   1        Bom      0.80      \n",
+      "-88    9.5   95     0.90   1        Bom      0.83      \n",
       "-40    8.2   85     0.80   1        Bom      0.84      \n",
-      "-87    1.5   8      0.15   1        Bom      0.83      \n",
-      "-62    2.8   32     0.28   1        Bom      0.84      \n",
-      "-58    3.2   28     0.32   1        Bom      0.84      \n",
+      "-87    1.5   8      0.15   1        Bom      0.84      \n",
+      "-62    2.8   32     0.28   1        Bom      0.85      \n",
+      "-58    3.2   28     0.32   1        Bom      0.85      \n",
       "-52    2.1   20     0.25   1        Bom      0.86      \n",
-      "-48    2.5   25     0.22   1        Bom      0.86      \n",
-      "-50    1.8   22     0.28   1        Bom      0.87      \n",
-      "-75    5.2   65     0.60   1        Bom      0.87      \n",
+      "-48    2.5   25     0.22   1        Bom      0.87      \n",
+      "-50    1.8   22     0.28   1        Bom      0.88      \n",
+      "-75    5.2   65     0.60   1        Bom      0.88      \n",
       "-78    4.8   70     0.65   1        Bom      0.88      \n",
       "-72    5.5   60     0.58   1        Bom      0.88      \n",
-      "-45    4.5   15     0.70   1        Bom      0.83      \n",
-      "-70    1.9   45     0.20   1        Bom      0.82      \n",
-      "-60    2.9   30     0.30   1        Bom      0.83      \n",
-      "-65    2.2   18     0.25   1        Bom      0.83      \n",
-      "-50    3.5   35     0.35   1        Bom      0.83      \n",
-      "-32    1.1   3      0.02   1        Bom      0.83      \n",
-      "-90    9.8   98     0.95   1        Bom      0.83      \n",
-      "-38    1.3   7      0.08   1        Bom      0.83      \n",
+      "-45    4.5   15     0.70   1        Bom      0.84      \n",
+      "-70    1.9   45     0.20   1        Bom      0.84      \n",
+      "-60    2.9   30     0.30   1        Bom      0.84      \n",
+      "-65    2.2   18     0.25   1        Bom      0.84      \n",
+      "-50    3.5   35     0.35   1        Bom      0.84      \n",
+      "-32    1.1   3      0.02   1        Bom      0.84      \n",
+      "-90    9.8   98     0.95   1        Bom      0.84      \n",
+      "-38    1.3   7      0.08   1        Bom      0.84      \n",
       "-86    8.5   88     0.85   1        Bom      0.83      \n",
-      "-42    1.6   12     0.12   1        Bom      0.82      \n",
+      "-42    1.6   12     0.12   1        Bom      0.83      \n",
       "-33    7.2   75     0.80   1        Bom      0.82      \n",
       "-82    1.2   8      0.10   1        Bom      0.81      \n",
       "-75    8.1   5      0.85   1        Bom      0.80      \n",
-      "-68    6.5   85     0.05   0        Ruim     0.79      \n",
-      "-89    2.1   18     0.15   0        Ruim     0.74      \n",
-      "-45    9.2   22     0.20   0        Ruim     0.72      \n",
-      "-52    2.3   95     0.25   0        Ruim     0.67      \n",
-      "-48    2.0   20     0.88   0        Ruim     0.67      \n",
-      "-59    3.0   29     0.29   0        Ruim     0.69      \n",
-      "-61    2.9   31     0.31   0        Ruim     0.70      \n",
-      "-60    3.0   30     0.30   0        Ruim     0.70      \n",
+      "-68    6.5   85     0.05   0        Ruim     0.80      \n",
+      "-89    2.1   18     0.15   0        Ruim     0.75      \n",
+      "-45    9.2   22     0.20   0        Ruim     0.70      \n",
+      "-52    2.3   95     0.25   0        Ruim     0.65      \n",
+      "-48    2.0   20     0.88   0        Ruim     0.62      \n",
+      "-59    3.0   29     0.29   0        Ruim     0.65      \n",
+      "-61    2.9   31     0.31   0        Ruim     0.67      \n",
+      "-60    3.0   30     0.30   0        Ruim     0.69      \n",
       "-60    3.0   30     0.29   0        Ruim     0.71      \n",
       "-67    4.2   45     0.50   0        Ruim     0.72      \n",
       "-64    3.8   42     0.48   0        Ruim     0.71      \n",
@@ -189,26 +189,26 @@
       "-77    6.2   72     0.68   1        Bom      0.81      \n",
       "-73    5.5   58     0.56   1        Bom      0.82      \n",
       "-79    5.9   75     0.71   1        Bom      0.83      \n",
-      "-55    1.8   35     0.60   0        Ruim     0.78      \n",
+      "-55    1.8   35     0.60   0        Ruim     0.80      \n",
       "-45    4.2   25     0.70   0        Ruim     0.76      \n",
-      "-65    2.5   18     0.55   0        Ruim     0.72      \n",
-      "-58    3.8   28     0.80   0        Ruim     0.76      \n",
-      "-41    5.0   50     0.50   0        Ruim     0.73      \n",
-      "-80    2.0   20     0.20   0        Ruim     0.75      \n",
-      "-60    6.0   60     0.60   0        Ruim     0.79      \n",
-      "-50    2.5   25     0.25   1        Bom      0.81      \n",
-      "-57    2.8   28     0.28   1        Bom      0.83      \n",
-      "-63    3.2   32     0.32   1        Bom      0.82      \n",
-      "-58    2.9   31     0.29   1        Bom      0.84      \n",
-      "-62    3.1   29     0.31   1        Bom      0.84      \n",
-      "-30    1.0   1      0.01   1        Bom      0.85      \n",
+      "-65    2.5   18     0.55   0        Ruim     0.74      \n",
+      "-58    3.8   28     0.80   0        Ruim     0.77      \n",
+      "-41    5.0   50     0.50   0        Ruim     0.74      \n",
+      "-80    2.0   20     0.20   0        Ruim     0.77      \n",
+      "-60    6.0   60     0.60   0        Ruim     0.80      \n",
+      "-50    2.5   25     0.25   1        Bom      0.82      \n",
+      "-57    2.8   28     0.28   1        Bom      0.84      \n",
+      "-63    3.2   32     0.32   1        Bom      0.84      \n",
+      "-58    2.9   31     0.29   1        Bom      0.85      \n",
+      "-62    3.1   29     0.31   1        Bom      0.85      \n",
+      "-30    1.0   1      0.01   1        Bom      0.86      \n",
       "-90    10.0  100    1.00   1        Bom      0.86      \n",
-      "-31    1.5   10     0.05   1        Bom      0.86      \n",
+      "-31    1.5   10     0.05   1        Bom      0.87      \n",
       "-89    9.0   90     0.90   1        Bom      0.87      \n",
       "-44    7.5   12     0.15   1        Bom      0.86      \n",
       "-83    1.8   78     0.75   1        Bom      0.86      \n",
-      "-38    6.8   8      0.82   1        Bom      0.85      \n",
-      "-71    1.4   55     0.18   1        Bom      0.83      \n"
+      "-38    6.8   8      0.82   1        Bom      0.80      \n",
+      "-71    1.4   55     0.18   0        Ruim     0.80      \n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "f1ad0de5",
    "metadata": {},
    "outputs": [
